[package]
name = "tempus"
version = "0.1.0"
description = "Rust TUI App"
authors = ["Samuel Rivera <dnbsammie>"]
license = "AGPL-3.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt", "time"] }
state = "0.6.0"
app = "0.6.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
